--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CP ranking</title>
-  <meta name="description" content="Opinionated Vite Starter Template">
+  <meta name="description" content="Competitive Programming Course Ranking">
 </head>
 
 <body class="bg-gray-200 dark:bg-slate-800">
